syntax = "proto3";

package server;

option go_package = "server/proto";

message RegisterRequest {
  string UserLogin = 1;
  string UserPassword = 2;

}

message RegisterResponce {
  string UserID = 1;
}

message LoginRequest {
  string UserLogin = 1;
  string UserPassword = 2;

}

message LoginResponce {
  string UserID = 1;
}

message SaveDataRequest {
  string storageID = 1;
  string metainfo = 2;
  string dataType = 3;
  string time = 4;
  bytes data = 5; 
}

message SaveDataResponse {
}

service Keeper {
  rpc RegisterUser(RegisterRequest) returns (RegisterResponce);
  rpc Loginuser(LoginRequest) returns (LoginResponce);
  rpc SaveData(SaveDataRequest) returns (SaveDataResponse);
}